spacing issues with team images on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1786,7 +1786,7 @@ team
   -moz-border-radius: 5px;
   border-radius: 0px 0px 40px 40px;
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 90px;
   margin-top: 45px;
 }
 
